
You can now add constant fields using --field_extra_info=floor54 and
--selectfields=....,extra_info,.... to print constant values into
the fields format. --field_xxx=yyy is the new name for --json_xxx=yyy.
The old --json_xxx=yyy continues to work for backwards compatibility.

The timestamp field/key is the time registered by wmbusmeters
when the telegram was received. (The telegram itself sometimes
contain another timestamp when the telegram was sent.)

This timestamp field is encoded using the local time when used
in hr/fields (ie "2021-01-01 12:15.00") but UTC time within json
(ie "2021-01-01T10:15.00Z").

This will stay the same. However now you can explicitly select
the timestamp format for the selected fields. Select timestamp_ut
to print the timestamp as a unix timestamp (ie seconds since 1970-01-01).
Select timestamp_utc for the timestamp in UTC and timestamp_lt for local time.

Daniel Glaser added support for the Aventies water meter! Thanks Daniel!

Mblnk added support for Qundis QWater5.5. Thanks Mblnk!

Support added for the water meter Diehl IZAR RC I G4.

Version 1.3.0: 2021-04-09

You can now use "auto" as a meter driver.
Wmbusmeters will then pick the right driver when
the first telegram arrives. A warning will be printed
in the logs if no driver could be found.

If you do not specify a type= in the meter config file,
then it will default to auto.

Added --logtimestamps=important/never/always to prefix
a logged line in the log file or stderr output with a timestamp.
Important means timestamp warnings and device changes.
Daemon mode defaults to important.

Added support for firmware version 0x14 for im871a dongle.
(The old version is 0x13 and you can see the firmware version if
you run with --verbose.) The new version of the im871a firmware
supports listening to c1 and t1 at the same time.

Version 1.2.0: 2021-03-07

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv
