@@ -313,6 +313,7 @@ Apator at-wmbus-08   (apator08) (non-standard protocol)
 Apator at-wmbus-16-2 (apator162) (non-standard protocol, spurious decoding errors)
 Apator Ultrimis (ultrimis)
 Aquametro/Integra Topas Es Kr (topaseskr)
+Axioma W1 (q400)
 Bmeters Hydrodigit (hydrodigit) (partly non-standard protocol)
 Diehl/Sappel IZAR RC 868 I R4 PL (izar) (non-standard protocol)
 Diehl HYDRUS (hydrus)
